--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "gh-pages": "^4.0.0",
     "mathjax-full": "^3.2.2",
     "mathjax-react": "^2.0.1",
     "react": "^18.2.0",
@@ -39,9 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
   },
   "homepage": "https://orid-19.github.io/proyecto_cas"
 }
